################################################################################
#
# qrtape
#
################################################################################

# qrtape #######################################################################

add_executable(qrtape
  main.cc
  util/crc16.cc
  util/file.cc
  util/string.cc
)
